# ocrmypdf-paddleocr-remote

./: .gitignore  README.md  pyproject.toml  setup.py
src/ocrmypdf_paddleocr/: plugin.py
src/ocrmypdf_paddleocr_remote/: __init__.py  _version.py  plugin.py
