[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocrmypdf-paddleocr-remote"
dynamic = ["version"]
description = "PaddleOCR-Remote plugin for OCRmyPDF"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MPL-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ocr", "pdf", "paddleocr", "ocrmypdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "ocrmypdf>=14.0.0",
    "requests>=2.30.0",
    "pillow>=9.0.0",
    "numpy>=1.24.4",
]

[project.urls]
Homepage = "https://github.com/zhuth/ocrmypdf-paddleocr"
Repository = "https://github.com/zhuth/ocrmypdf-paddleocr"
"Bug Tracker" = "https://github.com/zhuth/ocrmypdf-paddleocr/issues"

[project.entry-points.ocrmypdf]
paddleocr = "ocrmypdf_paddleocr_remote.plugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/ocrmypdf_paddleocr_remote/_version.py"
